# Scrapbox-Backend

./: .env  Cargo.toml  docker-compose.yml  start.sh
redis-data/: dump.rdb
redis-data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
src/: endpoints.rs  handle_req.rs  main.rs  player.rs  req_utils.rs  room.rs  ws_status.rs
src/player/: player.rs  wrapper.rs
