[package]
name = "scrapbox-backend-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
## Main backend handler
tungstenite = "0.17.3"

## Transfering structs and other data types via websocket
serde_derive = "1.0.147"
serde = "1.0.147"
bincode = "1.3.3"

# UUID-generator
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
