[package]
name = "scrapbox-backend-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
## Main backend handler
tungstenite = "0.17.3"

## Transfering structs and other data types via websocket
serde_derive = "1.0.147"
serde = "1.0.147"
serde_json = "1.0.87"
bincode = "1.3.3"

## For having static env variables (global scope)
lazy_static = "1.4.0"

## Database for storing rooms
redis = "0.22.1"

## For checking JWS auth
reqwest = { version = "0.11.0", features = ["blocking"] }

## For initializing .env k&v:s in main -> can be used in std::env later
dotenv = "0.15.0"

## For redirecting and creating rooms
responder = "0.1.84"

## For generating public room-id:s
rand = "0.8.5"

# UUID-generator
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
