[package]
name = "scrapbox-backend-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
## Main backend handler
warp = "1.0"

## For async main & more async / await functionality
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.25", features = ["sink", "std"] }
futures-channel = "0.3.25"

## Transfering structs and other data types via websocket
serde_derive = "1.0.147"
serde = "1.0.147"
serde_json = "1.0.87"
bincode = "1.3.3"

## For having static env variables (global scope)
lazy_static = "1.4.0"

## Database for storing rooms
mongodb = { version = "2.3.1", default-features = false, features = ["async-std-runtime"] }

## For checking JWS auth
reqwest = "0.11.0"

## For initializing .env k&v:s in main -> can be used in std::env later
dotenv = "0.15.0"

## For redirecting and creating rooms
responder = "0.1.84"

## For generating public room-id:s
rand = "0.8.5"

# UUID-generator
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
